--- a/styles/style.css
+++ b/styles/style.css
@@ -337,18 +337,20 @@
   box-sizing: border-box;
   background-color: #000000;
   color: white;
+  padding: 60px 80px;
 }
 
 .footer__columns {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 }
 
 .footer__column_content_hours {
+  margin-left: auto;
 }
 
 .footer__column_content_social {
+  margin-left: 80px;
 }
 
 .footer__logo {
@@ -357,7 +359,7 @@
 }
 
 .footer__column-heading {
-  color: #ffffff;
+  margin: 0;
 }
 
 .footer__list {
@@ -368,7 +370,6 @@
 }
 
 .footer__list-item {
-  color: #ffffff;
 }
 
 .footer__column-link {
@@ -379,8 +380,9 @@
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  margin-right: 10px;
 }
 
 .footer__copyright {
-  color: #ffffff;
+  margin-top: 100px;
 }
